--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   
   <script src="scripts/scenes/MainMenu.js"></script>
+  <script src="scripts/scenes/CreditScene.js"></script>
   <script src="scripts/scenes/IntroductionScene.js"></script>
   <script src="scripts/scenes/GameScene1.js"></script>
   <script src="scripts/scenes/GameScene2.js"></script>
